--- a/pages/.portfolio-detail.html
+++ b/pages/.portfolio-detail.html
@@ -134,6 +134,13 @@
                         <p>
                             #
                         </p>
+
+                        <h3 class="mt-5">Features:</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item"><strong> #</strong> ###</li>
+                            <li class="list-group-item"><strong> #</strong> ###</li>
+                            <li class="list-group-item"><strong> #</strong> ###</li>
+                        </ul>
                     </div>
                 </div>
             </div>
