--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -146,7 +146,7 @@
               is expected that
               most of important events in the city could be detected via monitoring these data.
             </p> <iframe
-              src="https://maulanakavaldo.github.io/dicoding_project/Belajar%20Analisis%20Data%20dengan%20Python/bike_sharing.html"
+              src="https://github.com/maulanakavaldo/bike_sharing"
               frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
