--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -108,7 +108,7 @@
                     <strong>Project URL</strong>
                   </div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/dicoding_project" target="_blank">: GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/bike_sharing" target="_blank">: GitHub</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
@@ -146,7 +146,7 @@
               is expected that
               most of important events in the city could be detected via monitoring these data.
             </p> <iframe
-              src="https://github.com/maulanakavaldo/bike_sharing"
+              src="https://maulanakavaldo.github.io/dicoding_project/Belajar%20Analisis%20Data%20dengan%20Python/bike_sharing.html"
               frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
