--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -87,6 +87,16 @@
                   <div class="col-3"><strong>Role</strong></div>
                   <div class="col-9">: Data Scientist</div>
                 </li>
+                <!-- Company -->
+                <li class="list-group-item d-flex">
+                    <div class="col-3"><strong>Company</strong></div>
+                    <div class="col-9">
+                        <a href="https://www.dicoding.com/" target="_blank">: Dicoding</a>,
+                        <a href="https://www.dicoding.com/users/maulanakavaldo/academies"
+                            target="_blank">My Profile</a>
+
+                    </div>
+                </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
