--- a/index.html
+++ b/index.html
@@ -970,6 +970,32 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/book-shelf-api/book-shelf-api.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Bookshelf API</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-bookshelf-api.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-web-server/web-server.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4></h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-web-server.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/tableau.png" class="img-fluid" alt="">
