--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-apps">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/book-shelf-api/book-shelf-api.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -983,7 +983,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-web-server/web-server.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
