--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-web-server/web-server.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
-                <h4></h4>
+                <h4>Web Server</h4>
                 <div class="portfolio-links">
                   <a href="pages/project-web-server.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
