--- a/pages/project-bookshelf-api.html
+++ b/pages/project-bookshelf-api.html
@@ -64,6 +64,11 @@
                                             alt="" data-gallery="portfolioGallery" class="portfolio-lightbox"
                                             role="button" />
                                     </div>
+                                    <div class="swiper-slide">
+                                        <img src="../assets/img/portfolio/book-shelf-api/review.png"
+                                            alt="" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                                            role="button" />
+                                    </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
