--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -62,6 +62,10 @@
                     <img src="../assets/img/portfolio/project-bike-sharing/bike-sharing.png" alt=""
                       data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                   </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/project-bike-sharing/review.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
