--- a/pages/project-rock-paper-scrissor.html
+++ b/pages/project-rock-paper-scrissor.html
@@ -62,6 +62,10 @@
                     <img src="../assets/img/portfolio/project-rock-paper-scrissor/rock_paper_scrissor.png" alt=""
                       data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                   </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/project-rock-paper-scrissor/review.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -86,6 +90,16 @@
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
                   <div class="col-9">: Machine Learning Developer</div>
+                </li>
+                <!-- Company -->
+                <li class="list-group-item d-flex">
+                    <div class="col-3"><strong>Company</strong></div>
+                    <div class="col-9">
+                        <a href="https://www.dicoding.com/" target="_blank">: Dicoding</a>,
+                        <a href="https://www.dicoding.com/users/maulanakavaldo/academies"
+                            target="_blank">My Profile</a>
+
+                    </div>
                 </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
