--- a/pages/project-web-server.html
+++ b/pages/project-web-server.html
@@ -63,6 +63,10 @@
                                         <img src="../assets/img/portfolio/project-web-server/web-server.png" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
+                                    <div class="swiper-slide">
+                                        <img src="../assets/img/portfolio/project-web-server/review.png" alt=""
+                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                    </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
