--- a/pages/project-web-hc-system.html
+++ b/pages/project-web-hc-system.html
@@ -50,7 +50,7 @@
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+      <div class="container portfolio-info">
         <div class="row">
           <!-- Bagian slider -->
           <div class="col-md-6">
@@ -111,7 +111,7 @@
 
           <!-- Bagian informasi proyek -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <h3>Project Information</h3>
               <ul class="list-group">
                 <li class="list-group-item d-flex">
@@ -166,8 +166,8 @@
           </div>
         </div>
 
-        <div class="col-lg-12 col-lg-6">
-          <div class="portfolio-info">
+        <div class="col-lg-12 col-lg-6 mt-5">
+          <div class="">
             <h3>Details</h3>
             <p>
               HC System merupakan sistem yang terintegrasi antara Human Capital Astra Credit Companies maupun pihak
@@ -187,7 +187,7 @@
               dalam pengembangan aplikasi yang andal dan berkualitas tinggi menjadi inti dari peran ini.
             </p>
 
-            <h3>Fitur:</h3>
+            <h3 class=" mt-5">Fitur:</h3>
             <ul class="list-group">
               <li class="list-group-item">Login Page: Login berdasarkan Email dan Password dengan pengecekan melalui
                 database.</li>
