--- a/pages/project-web-system-recommendation.html
+++ b/pages/project-web-system-recommendation.html
@@ -53,63 +53,63 @@
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+      <div class="container portfolio-info">
         <div class="row">
           <!-- Bagian slider -->
           <div class="col-md-6">
-            <div class="portfolio-info">
-            <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
-              <div class="swiper-wrapper align-items-center">
-                <!-- Tambahkan slide gambar di sini -->
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-0.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+            <div class="">
+              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+                <div class="swiper-wrapper align-items-center">
+                  <!-- Tambahkan slide gambar di sini -->
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-0.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-1.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-2.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-3.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-4.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-5.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-6.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-7.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-8.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/web-system-recommendation/slide-9.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
                 </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-1.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-2.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-3.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-4.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-5.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-6.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-7.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-8.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-9.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
-                </div>
+                <div class="swiper-pagination"></div>
               </div>
-              <div class="swiper-pagination"></div>
-            </div>
             </div>
           </div>
 
           <!-- Bagian informasi proyek -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <h3>Project Information</h3>
               <ul class="list-group">
                 <li class="list-group-item d-flex">
@@ -121,6 +121,11 @@
                   <div class="col-3"><strong>Category</strong></div>
                   <div class="col-9">: Website</div>
                 </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Role</strong></div>
+                  <div class="col-9">: Fullstack Developer (Student)</div>
+                </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
@@ -128,7 +133,8 @@
                   </div>
                   <div class="col-9">
                     : March - June 2022
-                  </div><!-- Project tools -->
+                  </div>
+                  <!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
@@ -157,7 +163,7 @@
           </div>
         </div>
 
-        <div class="col-lg-12 col-lg-6">
+        <div class="col-lg-12 col-lg-6 mt-5">
           <div class="portfolio-info">
             <h3>Details</h3>
             <p>
