--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -50,11 +50,11 @@
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+      <div class="container portfolio-info">
         <div class="row align-items-stretch">
           <!-- Bagian slider -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
                 <div class="swiper-wrapper align-items-center">
                   <!-- Tambahkan slide gambar di sini -->
@@ -74,7 +74,7 @@
 
           <!-- Bagian informasi proyek -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <h3>Project Information</h3>
               <ul class="list-group">
                 <li class="list-group-item d-flex">
@@ -137,7 +137,7 @@
           </div>
         </div>
 
-        <div class="col-lg-12 col-lg-6">
+        <div class="col-lg-12 col-lg-6 mt-5">
           <div class="portfolio-info">
             <h3>Details</h3>
             <p>
