--- a/pages/project-react-simple-app.html
+++ b/pages/project-react-simple-app.html
@@ -50,13 +50,13 @@
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-        <div class="row align-items-stretch">
+      <div class="container portfolio-info">
+        <div class="row">
           <!-- Bagian slider -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
-                <div class="swiper-wrapper align-items-center">
+                <div class="swiper-wrapper">
                   <!-- Tambahkan slide gambar di sini -->
                   <div class="swiper-slide">
                     <img src="../assets/img/portfolio/react-simple-app/simple-app-react.png" alt=""
@@ -70,7 +70,7 @@
 
           <!-- Bagian informasi proyek -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <h3>Project Information</h3>
               <ul class="list-group">
                 <li class="list-group-item d-flex">
@@ -124,7 +124,7 @@
           </div>
         </div>
 
-        <div class="col-lg-12 col-lg-6">
+        <div class="col-lg-12 col-lg-6 mt-5">
           <div class="portfolio-info">
             <h3>Details</h3>
             <p>
