--- a/pages/project-web-hc-system.html
+++ b/pages/project-web-hc-system.html
@@ -167,7 +167,7 @@
         </div>
 
         <div class="col-lg-12 col-lg-6 mt-5">
-          <div class="">
+          <div class="portfolio-info">
             <h3>Details</h3>
             <p>
               HC System merupakan sistem yang terintegrasi antara Human Capital Astra Credit Companies maupun pihak
