--- a/index.html
+++ b/index.html
@@ -421,7 +421,41 @@
             </div>
 
             <div class="resume-item">
-              <h4>Bootcamp Techno Center</h4>
+              <h4>XL Axiata Future Leader</h4>
+              <h5>Aug - Oct 2022</h5>
+              <p><em>XL Axiata | Fisipol UGM</em></p>
+              <p>Development of soft skills by applying bloom taxonomy and inquiry learning in order to sharpen thinking
+                processes.</p>
+            </div>
+
+            <h3 class="resume-title">Training</h3>
+
+            <div class="resume-item">
+              <h4>Bootcamp Alibaba Big Data</h4>
+              <h5>May - June 2024</h5><br>
+              <em>DTS KOMINFO | Alibaba</em>
+              <!-- <p> -->
+              <br>
+              <!-- Achievement: -->
+              <!-- <div style="margin-left: 1em;"> -->
+              <!-- <li>Overall score: /100</li> -->
+              <!-- </p> -->
+            </div>
+
+            <div class="resume-item">
+              <h4>Bootcamp Cloud Architecting</h4>
+              <h5>Feb - Mart 2024</h5><br>
+              <em>DTS KOMINFO | AWS</em>
+              <!-- <p> -->
+              <br>
+              <!-- Achievement: -->
+              <!-- <div style="margin-left: 1em;"> -->
+              <!-- <li>Overall score: /100</li> -->
+              <!-- </p> -->
+            </div>
+
+            <div class="resume-item">
+              <h4>Bootcamp Techno Center B8</h4>
               <h5>September - Present</h5><br>
               <em>Berijalan - Member of ASTRA</em>
               <!-- <p> -->
@@ -482,15 +516,6 @@
               </div>
               <!-- </p> -->
             </div>
-
-            <div class="resume-item">
-              <h4>XL Axiata Future Leader</h4>
-              <h5>Aug - Oct 2022</h5>
-              <p><em>XL Axiata | Fisipol UGM</em></p>
-              <p>Development of soft skills by applying bloom taxonomy and inquiry learning in order to sharpen thinking
-                processes.</p>
-            </div>
-
           </div>
 
           <div class="col-lg-6">
@@ -498,11 +523,26 @@
 
             <div class="resume-item">
               <a href="#aws-ccp">
+                <h4>AWS Certified Solutions Architect Associate<span>&nbsp;</span><span class="bx bx-link"></span></h4>
+              </a>
+              <h5>April 2024</h5>
+              <p><em>Amazon Web Service (AWS)</em></p>
+            </div>
+
+            <div class="resume-item">
+              <a href="#aws-ccp">
+                <h4>FGA Cloud Architecting<span>&nbsp;</span><span class="bx bx-link"></span></h4>
+              </a>
+              <h5>April 2024</h5>
+              <p><em>DTS Kominfo</em></p>
+            </div>
+
+            <div class="resume-item">
+              <a href="#aws-ccp">
                 <h4>AWS Certified Cloud Practitioner<span>&nbsp;</span><span class="bx bx-link"></span></h4>
               </a>
               <h5>June 2023</h5>
               <p><em>Amazon Web Service (AWS)</em></p>
-
             </div>
 
             <div class="resume-item">
@@ -512,7 +552,6 @@
               </a>
               <h5>June 2023</h5>
               <p><em>Kartu Prakerja | Karir.mu</em></p>
-
             </div>
 
             <div class="resume-item">
@@ -522,7 +561,6 @@
               </a>
               <h5>June 2023</h5>
               <p><em>Kartu Prakerja | Rumah Siap Kerja</em></p>
-
             </div>
 
             <div class="resume-item">
@@ -531,7 +569,6 @@
               </a>
               <h5>May 2023</h5>
               <p><em>DTS KOMINFO | Google</em></p>
-
             </div>
 
             <div class="resume-item">
@@ -540,7 +577,6 @@
               </a>
               <h5>Mart 2023</h5>
               <p><em>Alibaba Cloud</em></p>
-
             </div>
 
             <div class="resume-item">
@@ -554,7 +590,6 @@
                 class="portfolio-lightbox"></a>
               <h5>October 2022</h5>
               <p><em>DTS KOMINFO | Binar Academy</em></p>
-
             </div>
 
             <div class="resume-item">
@@ -600,8 +635,6 @@
                 <li> </li>
              </ul> -->
             </div>
-
-
           </div>
 
           <div class="col-lg-12">
@@ -783,7 +816,6 @@
               </div>
             </div>
           </div>
-
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
@@ -1784,7 +1816,7 @@
           </svg>
         </a>
       </div>
-      
+
     </section>
     <!-- End Portfolio Section -->
 
