--- a/pages/gallery-aws-certification.html
+++ b/pages/gallery-aws-certification.html
@@ -76,7 +76,7 @@
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-ccp.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -87,7 +87,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-ccp-score-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -96,9 +96,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-ccp-score-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -109,7 +109,7 @@
             </div>
           </div> -->
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-saa.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -120,7 +120,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-saa-score-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -129,9 +129,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/aws/aws-saa-score-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -141,6 +141,17 @@
               </div>
             </div>
           </div> -->
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-aws">
+            <div class="portfolio-wrap">
+              <img src="../assets/img/certif_licen/aws/skill-builder-aws.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="../assets/img/certif_licen/aws/skill-builder-aws.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
