--- a/pages/project-a-visual-history-of-nobel-prize-winners.html
+++ b/pages/project-a-visual-history-of-nobel-prize-winners.html
@@ -60,12 +60,9 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/web-system-recommendation/slide-0.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/web-system-recommendation/slide-1.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                        <img src="../assets/img/portfolio/datacamp/A Visual History of Nobel Prize Winners.png"
+                                            alt="" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                                            role="button" />
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -80,17 +77,17 @@
                             <ul class="list-group">
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class="col-9">: A Visual History of Nobel Prize Winners</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class="col-9">: Data Science</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class="col-9">: Data Scientist</div>
                                 </li>
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
@@ -98,14 +95,14 @@
                                         <strong>Project date</strong>
                                     </div>
                                     <div class="col-9">
-                                        :
+                                        : February 2023
                                     </div><!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
                                     <div class="col-9">
-                                        :
+                                        : Jupyter Notebook
                                     </div>
                                 </li><!-- Project URL -->
                                 <li class="list-group-item d-flex">
@@ -113,14 +110,8 @@
                                         <strong>Project URL</strong>
                                     </div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: GitHub</a>
-                                    </div>
-                                </li>
-                                <!-- Uncomment and use as needed for other section -->
-                                <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Demo</strong></div>
-                                    <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="https://github.com/maulanakavaldo/DataCamp/blob/main/A%20Visual%20History%20of%20Nobel%20Prize%20Winners/A%20Visual%20History%20of%20Nobel%20Prize%20Winners.ipynb"
+                                            target="_blank">: GitHub</a>
                                     </div>
                                 </li>
                             </ul>
@@ -129,18 +120,13 @@
                 </div>
 
                 <div class="col-lg-12 col-lg-6 mt-5">
-                    <div class="portfolio-info">
+                    <div class="">
                         <h3>Details</h3>
-                        <p>
-                            #
-                        </p>
-
-                        <h3 class="mt-5">Features:</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item"><strong> #</strong> ###</li>
-                            <li class="list-group-item"><strong> #</strong> ###</li>
-                            <li class="list-group-item"><strong> #</strong> ###</li>
-                        </ul>
+                        <div id="loading-message" class="center">Loading...</div>
+                        <iframe
+                            src="https://maulanakavaldo.github.io/DataCamp/A Visual History of Nobel Prize Winners/A Visual History of Nobel Prize Winners.html "
+                            frameborder="0" style="width: 100%; height: 1000px;"
+                            onload="document.getElementById('loading-message').hidden = true;"></iframe>
                     </div>
                 </div>
             </div>
