--- a/pages/project-investigating-netflix-movies-and-guest-stars-in-the-office.html
+++ b/pages/project-investigating-netflix-movies-and-guest-stars-in-the-office.html
@@ -52,7 +52,7 @@
         <!-- ======= Portfolio Details Section ======= -->
         <section id="portfolio-details" class="portfolio-details">
             <div class="container portfolio-info"> <!-- portfolio-info Disini-->
-                <div class="row align-items-stretch">
+                <div class="row">
                     <!-- Bagian slider -->
                     <div class="col-md-6">
                         <div class=""> <!-- portfolio-info Disini-->
@@ -60,12 +60,9 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/web-system-recommendation/slide-0.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/web-system-recommendation/slide-1.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                        <img src="../assets/img/portfolio/datacamp/Investigating Netflix Movies and Guest Stars in The Office.png"
+                                            alt="" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                                            role="button" />
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -80,17 +77,18 @@
                             <ul class="list-group">
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class="col-9">: Investigating Netflix Movies and Guest Stars in The Office
+                                    </div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class="col-9">: Data Science</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class="col-9">: Data Scientist</div>
                                 </li>
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
@@ -98,14 +96,14 @@
                                         <strong>Project date</strong>
                                     </div>
                                     <div class="col-9">
-                                        :
+                                        : February 2023
                                     </div><!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
                                     <div class="col-9">
-                                        :
+                                        : Jupyter Notebook
                                     </div>
                                 </li><!-- Project URL -->
                                 <li class="list-group-item d-flex">
@@ -113,14 +111,8 @@
                                         <strong>Project URL</strong>
                                     </div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: GitHub</a>
-                                    </div>
-                                </li>
-                                <!-- Uncomment and use as needed for other section -->
-                                <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Demo</strong></div>
-                                    <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
+                                            target="_blank">: GitHub</a>
                                     </div>
                                 </li>
                             </ul>
@@ -131,16 +123,11 @@
                 <div class="col-lg-12 col-lg-6 mt-5">
                     <div class="portfolio-info">
                         <h3>Details</h3>
-                        <p>
-                            #
-                        </p>
-
-                        <h3 class="mt-5">Features:</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item"><strong> #</strong> ###</li>
-                            <li class="list-group-item"><strong> #</strong> ###</li>
-                            <li class="list-group-item"><strong> #</strong> ###</li>
-                        </ul>
+                        <div id="loading-message" class="center">Loading...</div>
+                        <iframe
+                            src="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
+                            frameborder="0" style="width: 100%; height: 1000px;"
+                            onload="document.getElementById('loading-message').hidden = true;"></iframe>
                     </div>
                 </div>
             </div>
