--- a/pages/project-investigating-netflix-movies-and-guest-stars-in-the-office.html
+++ b/pages/project-investigating-netflix-movies-and-guest-stars-in-the-office.html
@@ -124,8 +124,12 @@
                     <div class="portfolio-info">
                         <h3>Details</h3>
                         <div id="loading-message" class="center">Loading...</div>
-                        <iframe
+                        <!-- <iframe
                             src="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
+                            frameborder="0" style="width: 100%; height: 1000px;"
+                            onload="document.getElementById('loading-message').hidden = true;"></iframe> -->
+                        <iframe
+                            src="https://github.com/maulanakavaldo/DataCamp/blob/main/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.ipynb"
                             frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;"></iframe>
                     </div>
