--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
-                <h4>VIX - Kalbe Nutritionals</h4>
+                <!-- <h4>VIX - Kalbe Nutritionals</h4> -->
                 <div class="portfolio-links">
                   <a href="https://maulanakavaldo.github.io/Virtual-Internship/Kalbe%20Nutritionals%20-%20Data%20Scientist/vix_kalbe.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
