--- a/pages/.portfolio-detail.html
+++ b/pages/.portfolio-detail.html
@@ -78,49 +78,66 @@
                         <div class="">
                             <h3>Project Information</h3>
                             <ul class="list-group">
+                                <!-- Project name -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9"></div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9"></div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
-                                    <div class="col-9">: </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9"></div>
+                                </li>
+                                <!-- Company -->
+                                <li class="list-group-item d-flex">
+                                    <div class="col-3"><strong>Company</strong></div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">
+                                        <a href="" target="_blank"></a>
+                                    </div>
                                 </li>
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project date</strong>
                                     </div>
-                                    <div class="col-9">
-                                        :
-                                    </div><!-- Project tools -->
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9"></div>
+
+                                </li>
+                                <!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        :
                                     </div>
-                                </li><!-- Project URL -->
+                                </li>
+                                <!-- Project URL -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project URL</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: GitHub</a>
+                                        <a href="#" target="_blank">GitHub</a>
                                     </div>
                                 </li>
                                 <!-- Uncomment and use as needed for other section -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Demo</strong></div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="#" target="_blank"></a>
                                     </div>
                                 </li>
                             </ul>
@@ -129,7 +146,7 @@
                 </div>
 
                 <div class="col-lg-12 col-lg-6 mt-5">
-                    <div class="portfolio-info">
+                    <div class=""> <!--portfolio-info-->
                         <h3>Details</h3>
                         <p>
                             #
@@ -141,6 +158,11 @@
                             <li class="list-group-item"><strong> #</strong> ###</li>
                             <li class="list-group-item"><strong> #</strong> ###</li>
                         </ul>
+
+                        <div id="loading-message" class="center">Loading...</div>
+                        <iframe src="" frameborder="0" style="width: 100%; height: 1000px;"
+                            onload="document.getElementById('loading-message').hidden = true;">
+                        </iframe>
                     </div>
                 </div>
             </div>
