--- a/pages/vix-kalbe-nutritionals.html
+++ b/pages/vix-kalbe-nutritionals.html
@@ -60,7 +60,11 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/banjir-jakarta/banjir-jakarta.png"" alt=""
+                                        <img src="../assets/img/portfolio/project-vix/vix-kalbe.png" alt=""
+                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="../assets/img/portfolio/project-vix/dashboard-kalbe.png" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
                                 </div>
@@ -74,31 +78,33 @@
                         <div class="">
                             <h3>Project Information</h3>
                             <ul class="list-group">
-                                <!-- Project name -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Banjir Jakarta Tahun 2020</div>
+                                    <div class="col-9">Arima Time Series Sales Forecasting and Customer Segmentation
+                                        Using Kmeans Clustering</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Data Science</div>
+                                    <div class="col-9">Data Sciece, Virtual Internship</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Data Analyst</div>
+                                    <div class="col-9">Data Scientist</div>
                                 </li>
                                 <!-- Company -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Company</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="" target="_blank">Jakarta Smart City</a>
+                                        <a href="https://kalbenutritionals.com/en" target="_blank">Kalbe
+                                            Nutritionals</a>
                                     </div>
+
                                 </li>
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
@@ -106,27 +112,26 @@
                                         <strong>Project date</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">September 2023</div>
-
-                                </li>
-                                <!-- Project tools -->
+                                    <div class="col-9">
+                                        September 2023
+                                    </div><!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                      Jupyter Notebook
+                                        Jupyter Notebook, Tableau
                                     </div>
-                                </li>
-                                <!-- Project URL -->
+                                </li><!-- Project URL -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project URL</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://github.com/maulanakavaldo/JSC-Data-Science-Trainee" target="_blank">GitHub</a>
+                                        <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Kalbe%20Nutritionals%20-%20Data%20Scientist"
+                                            target="_blank">GitHub</a>
                                     </div>
                                 </li>
                                 <!-- Uncomment and use as needed for other section -->
@@ -134,7 +139,11 @@
                                     <div class="col-3"><strong>Link</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://banjir-jakarta-6godbsa.gamma.site/" target="_blank">Presentation</a>
+                                        <a href="https://gamma.app/public/ARIMA-TIME-SERIES-SALES-FORECASTING-AND-CUSTOMER-SEGMENTATION-USI-edem22y3tq5znyy"
+                                            target="_blank">Presentation, </a>
+                                        <a href="https://youtu.be/IOUuUmgIvp8" target="_blank">Youtube</a>,
+                                        <a href="https://public.tableau.com/app/profile/maulana.kavaldo/viz/DashboardSales-RakaminxKalbeNutritionals/DASHBOARDSALES"
+                                            target="_blank">Tableau</a>
                                     </div>
                                 </li>
                             </ul>
@@ -146,11 +155,26 @@
                     <div class=""> <!--portfolio-info-->
                         <h3>Details</h3>
                         <p>
-                            
+                            This project is an initiative that combines two powerful data analysis techniques to
+                            optimize marketing and inventory management strategies. We apply the ARIMA (AutoRegressive
+                            Integrated Moving Average) model to perform sales forecasts. By using historical sales data,
+                            we can predict future trends and fluctuations in sales of Kalbe Nutritionals products. This
+                            allows companies to make more timely decisions regarding production, distribution, and
+                            marketing strategies.
                         </p>
-
+                        <p>
+                            Apart from that, we also apply customer segmentation techniques using the KMeans Clustering
+                            algorithm. By using customer data such as purchasing behavior, preferences and demographics,
+                            we have succeeded in grouping Kalbe Nutritionals customers into different segments. This
+                            helps in understanding customer needs and preferences better, and allows companies to adjust
+                            marketing and customer service strategies effectively. Through this project, we not only
+                            optimize the company's internal processes, but also help Kalbe Nutritionals understand their
+                            market better
+                        </p>
                         <div id="loading-message" class="center">Loading...</div>
-                        <iframe src="https://maulanakavaldo.github.io/JSC-Data-Science-Trainee/" frameborder="0" style="width: 100%; height: 1000px;"
+                        <iframe
+                            src="https://maulanakavaldo.github.io/Virtual-Internship/Kalbe%20Nutritionals%20-%20Data%20Scientist/vix_kalbe.html"
+                            frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe>
                     </div>
