--- a/pages/project-vix-hci.html
+++ b/pages/project-vix-hci.html
@@ -2,61 +2,167 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Bike Sharing </title>
-  <meta content="" name="description" />
-  <meta content="" name="keywords" />
+  <title>Maulana Kavaldo</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon" />
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet" />
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet" />
-
-  <!-- =======================================================
-  * Template Name: MyResume - v4.9.2
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
-    <!-- <section id="portfolio-details" class="portfolio-details"> -->
-    <!-- <div class="container"> -->
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container portfolio-info"> <!-- portfolio-info Disini-->
+        <div class="row align-items-stretch">
+          <!-- Bagian slider -->
+          <div class="col-md-6">
+            <div class=""> <!-- portfolio-info Disini-->
+              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+                <div class="swiper-wrapper align-items-center">
+                  <!-- Tambahkan slide gambar di sini -->
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/project-vix/vix-hci.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
 
-    <!-- <div class=""> -->
-      <!-- <div class="portfolio-info"> -->
-        <iframe
-          src="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.html"
-          frameborder="0" style="width: 100%; height: 1000px;"></iframe>
-        <br><hr><br>
-        <iframe
-          src="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
-          frameborder="0" style="width: 100%; height: 1000px;"></iframe>
-      <!-- </div> -->
-    <!-- </div> -->
-    <!-- </div> -->
-    <!-- </section> -->
+          <!-- Bagian informasi proyek -->
+          <div class="col-md-6">
+            <div class="">
+              <h3>Project Information</h3>
+              <ul class="list-group">
+                <!-- Project name -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Project name</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Predictive Analysis of Loan Repayment Success at Home Credit Indonesia</div>
+                </li>
+                <!-- Category -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Category</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Data Science, Financial</div>
+                </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Role</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Data Scientist</div>
+                </li>
+                <!-- Company -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Company</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">
+                    <a href="https://www.homecredit.co.id/" target="_blank">Home Credit Indonesia</a>
+                  </div>
+                </li>
+                <!-- Project date -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project date</strong>
+                  </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Mart 2023</div>
+
+                </li>
+                <!-- Project tools -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Tools</strong>
+                  </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Jupyter Notebook
+                  </div>
+                </li>
+                <!-- Project URL -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project URL</strong>
+                  </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">
+                    <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Home%20Credit%20Indonesia"
+                      target="_blank">GitHub</a>
+                  </div>
+                </li>
+                <!-- Uncomment and use as needed for other section -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Link</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">
+                    <a href="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
+                      target="_blank">Presentation</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-12 col-lg-6 mt-5">
+          <div class=""> <!--portfolio-info-->
+            <h3>Details</h3>
+            <p>
+
+            </p>
+
+            <div id="loading-message" class="center">Loading...</div>
+            <iframe
+              src="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.html"
+              frameborder="0" style="width: 100%; height: 1000px;"
+              onload="document.getElementById('loading-message').hidden = true;">
+            </iframe>
+
+            <!-- <iframe
+            src="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
+            frameborder="0" style="width: 100%; height: 1000px;"></iframe> -->
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End Portfolio Details Section -->
   </main>
   <!-- End #main -->
@@ -74,7 +180,6 @@
   <script src="../assets/vendor/typed.js/typed.min.js"></script>
   <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="../assets/vendor/php-email-form/validate.js"></script>
-
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
 </body>
