--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
               <div class=" portfolio-info">
                 <!-- <h4>VIX - Kalbe Nutritionals</h4> -->
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/Virtual-Internship/Kalbe%20Nutritionals%20-%20Data%20Scientist/vix_kalbe.html"
+                  <a href="pages/project-vix-kalbe-nutritionals.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -840,8 +840,8 @@
               <div class=" portfolio-info">
                 <h4>VIX - Bank Muamalat</h4>
                 <div class="portfolio-links">
-                  <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Bank%20Muamalat"
-                    target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-vix-muamalat.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
