--- a/pages/project-vix-hci.html
+++ b/pages/project-vix-hci.html
@@ -62,6 +62,10 @@
                     <img src="../assets/img/portfolio/project-vix/vix-hci.png" alt=""
                       data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                   </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/certif_licen/vix-hci.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
