--- a/pages/project-vix-kalbe-nutritionals.html
+++ b/pages/project-vix-kalbe-nutritionals.html
@@ -67,6 +67,11 @@
                                         <img src="../assets/img/portfolio/project-vix/dashboard-kalbe.png" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
+                                    <div class="swiper-slide">
+                                        <img src="../assets/img/certif_licen/vix-kalbe.png" alt=""
+                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                    </div>
+                                    
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
