--- a/pages/project-vix-muamalat.html
+++ b/pages/project-vix-muamalat.html
@@ -67,6 +67,11 @@
                                         <img src="../assets/img/portfolio/project-vix/dashboard-bmi.png" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
+                                    
+                                    <div class="swiper-slide">
+                                        <img src="../assets/img/certif_licen/vix-muamalat.png" alt=""
+                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                    </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
@@ -139,7 +144,8 @@
                                     <div class="col-3"><strong>Link</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://drive.google.com/drive/folders/1SU-Tqe3AdU0A7xBhi561yMOJLR6OQr2v?usp=drive_link" target="_blank">Documentation</a>
+                                        <a href="https://drive.google.com/drive/folders/1SU-Tqe3AdU0A7xBhi561yMOJLR6OQr2v?usp=drive_link"
+                                            target="_blank">Documentation</a>
                                     </div>
                                 </li>
                             </ul>
@@ -153,15 +159,14 @@
                         <p>
 
                         </p>
-                        <iframe src="https://drive.google.com/file/d/1VA_pvtKNmvOZC1a-jkBgYXHhJrANzKX9/view?usp=sharing"
+                        <div id="loading-message" class="center">Loading...</div>
+
+
+                        <iframe src="https://drive.google.com/file/d/1VA_pvtKNmvOZC1a-jkBgYXHhJrANzKX9/view"
                             frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe>
 
-
-
-
-                        <div id="loading-message" class="center">Loading...</div>
                         <!-- <iframe src="https://github.com/maulanakavaldo/Virtual-Internship/blob/main/Bank%20Muamalat/Task%205%20-%20Maulana%20Kavaldo.pdf" frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe> -->
